# URemoteServer

./: .gitignore  .gitmodules  AI.cpp  AI.h  App.cpp  App.h  CMakeLists.txt  Exchange.cpp  Exchange.h  FileManager.cpp  FileManager.h  Goemetry.cpp  Goemetry.h  Keyboard.cpp  Keyboard.h  MasterVolume.cpp  MasterVolume.h  Message.cpp  Message.h  MessageHandler.cpp  MessageHandler.h  MessageManager.cpp  MessageManager.h  MonUtils.cpp  MonUtils.h  README.md  Server.cpp  Server.h  Speech.cpp  Speech.h  StringUtils.cpp  StringUtils.h  URemoteServer.sln  URemoteServer.vcxproj  URemoteServer.vcxproj.filters  URemoteServer.workspace  URemoteServer.workspace.layout  Window.cpp  Window.h  biicode.conf  (+11 more)
ComWrapper/: ComHandler.cpp  ComHandler.h  ComWrapper.vcxproj
CppAPI/: CppAPI.cbp  CppAPI.depend  CppAPI.layout  CppAPI.vcxproj  README.md
CppAPI/src/: io_socket.cpp  io_socket.h  network_io.cpp  network_io.h  text_to_speech.cpp  text_to_speech.h  voice_recognition.cpp  voice_recognition.h
CppAPI/src/exception/: socket_exception.cpp  socket_exception.h  tts_exception.cpp  tts_exception.h  vr_exception.cpp  vr_exception.h
CppAPI/src/network_io/: io_service_pool.cpp  io_service_pool.h  request_handler.h  serialized_message.cpp  serialized_message.h  server_config.cpp  server_config.h  server_exchange.pb.cc  server_exchange.pb.h  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h
CppAPI/src/unix/: text_to_speech.cpp  text_to_speech.h  text_to_speech_unix.h  voice_recognition.cpp  voice_recognition.h  voice_recognition_unix.cpp  voice_recognition_unix.h
CppAPI/src/windows/: io_socket.cpp  io_socket.h  network_io.cpp  network_io.h  network_io_windows.cpp  text_to_speech.cpp  text_to_speech.h  text_to_speech_windows.cpp  text_to_speech_windows.h  voice_recognition.cpp  voice_recognition.h  voice_recognition_windows.cpp  voice_recognition_windows.h
CppAPI/src/windows/helpers/: ComHelper.cpp  ComHelper.h  com_helper.cpp  com_helper.h  winsock_helper.cpp  winsock_helper.h
URemoteServer/: .directory  ClassDiagram1.cd  Listener.cpp  Listener.h  URemoteServer.aps  URemoteServer.cbp  URemoteServer.depend  URemoteServer.layout  URemoteServer.vcxproj  URemoteServer.vcxproj.filters
URemoteServer/lang/: en.lang  fr.lang
URemoteServer/src/: AI.cpp  AI.h  AIConfig.cpp  AIConfig.h  Exchange.cpp  Exchange.h  Server.cpp  Server.h  ServerConfig.cpp  ServerConfig.h  TextKey.cpp  TextKey.h  ai_config.cpp  ai_config.h  api_config.h  authorized_users.cpp  authorized_users.h  executor.cpp  executor.h  main.cpp  server_exchange.pb.cc  server_exchange.pb.h  trad_key.h
URemoteServer/src/helpers/: ComHelper.cpp  ComHelper.h  WinSockHelper.cpp  WinSockHelper.h
URemoteServer/src/listeners/: ConsoleListener.cpp  ConsoleListener.h  Listener.cpp  Listener.h  URemoteListener.cpp  URemoteListener.h  VoiceListener.cpp  VoiceListener.h
URemoteServer/src/modules/: App.cpp  App.h  FileManager.cpp  FileManager.h  Keyboard.cpp  Keyboard.h  MasterVolume.cpp  MasterVolume.h  MonUtils.cpp  MonUtils.h  Speech.cpp  Speech.h  file_manager.cpp  file_manager.h  keyboard.cpp  keyboard.h  text_to_speech.cpp  text_to_speech.h
Utils/: AssemblyInfo.cpp  ReadMe.txt  SpecializedException.cpp  SpecializedException.h  Stdafx.cpp  Utils.vcxproj  Utils.vcxproj.filters
Utils/src/: FileException.cpp  FileException.h  FileHandler.cpp  FileHandler.h  Goemetry.cpp  Goemetry.h  Properties.cpp  Properties.h  Property.cpp  Property.h  PropertyException.cpp  PropertyException.h  StringUtils.cpp  StringUtils.h  Utils.cpp  Utils.h
conf_examples/: ai.conf  server.conf  users.conf
lang/: en.lang  fr.lang
libprotobuf/: libprotobuf.vcxproj  libprotobuf.vcxproj.filters
protobuf/: remote_command.proto
src/: AI.cpp  AI.h  ai_config.cpp  ai_config.h  authorized_users.cpp  authorized_users.h  executor.cpp  executor.h  globals.cpp  globals.h  main.cpp  trad_key.h
src/listeners/: ConsoleListener.cpp  ConsoleListener.h  Listener.cpp  Listener.h  URemoteListener.cpp  URemoteListener.h  VoiceListener.cpp  VoiceListener.h
src/logger/: file_logger.cpp  file_logger.h
src/modules/: App.cpp  App.h  MasterVolume.cpp  MasterVolume.h  MonUtils.cpp  MonUtils.h  file_manager.cpp  file_manager.h  keyboard.cpp  keyboard.h  master_volume.cpp  master_volume.h
test/: conf.cpp  test_conf.cpp  test_suites.cpp
test/conf/: server.conf
